--- a/src/main/webapp/perf.html
+++ b/src/main/webapp/perf.html
@@ -19,8 +19,8 @@ jhah dasf asf
 <script src="../../../node_modules/react-dom/dist/react-dom.min.js"></script>
 <script src="../../../node_modules/immutable/dist/immutable.min.js"></script>
 <script src="../../../node_modules/rx/dist/rx.all.min.js"></script>
-<script src="../../../dist/reframe.js"></script>
-<!--<script src="http://localhost:8080/js/reframe.js"></script>-->
+<!--<script src="../../../dist/reframe.js"></script>-->
+<script src="http://localhost:8090/js/reframe.js"></script>
 
 <script>
     var letters = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ';
@@ -102,7 +102,7 @@ jhah dasf asf
         return React.DOM.table(null, React.DOM.tbody.apply(null, [null].concat(rows)));
     });
 
-    React.render(TableView(), document.getElementById('app'));
+    ReactDOM.render(TableView(), document.getElementById('app'));
 
 
     window.updateRandom = function () {
