--- a/src/main/webapp/a.html
+++ b/src/main/webapp/a.html
@@ -15,14 +15,17 @@
     var a = reframe.atom(Immutable.Map({a: 1}));
     var r1 = reframe.reaction(() => a.deref().get('b'));
     var r2 = reframe.reaction(() => r1.deref());
+    var r3 = reframe.reaction(() => r1.deref());
 
     console.log('r1', r1.deref());
     console.log('r2', r2.deref());
+    console.log('r3', r3.deref());
 
     console.log('change');
     a.swap(old => old.set('b', 2));
     console.log('r1', r1.deref());
     console.log('r2', r2.deref());
+    console.log('r3', r3.deref());
 
     const App = reframe.view('App', function () {
         return React.DOM.div({}, 'App', reframe.subscribe(['value']).deref());
