request animation frame

--- a/src/main/webapp/perf.html
+++ b/src/main/webapp/perf.html
@@ -110,7 +110,7 @@ jhah dasf asf
         var x = random(size) + '';
         var y = random(size) + '';
 
-        reframe.dispatchSync(['update', y, x]);
+        reframe.dispatch(['update', y, x]);
     };
 
     var startTime = performance.now(),
