--- a/src/main/webapp/a.html
+++ b/src/main/webapp/a.html
@@ -41,7 +41,7 @@
 
     const Component = reframe.view('Component', function (rvalue, dep, hierarchy) {
 //        return React.DOM.div({}, 'Component ', rvalue.deref(), ' ', this.deref(dep), hierarchy);
-        return React.DOM.div({}, 'Component ', rvalue.deref(), ' ', hierarchy);
+        return React.DOM.div({}, 'Component ', rvalue.deref(), ' ', hierarchy, this.derefSub(['stopped']));
     });
 
     window.form = reframe.atom(Immutable.Map({value: 'value'}));
@@ -52,16 +52,16 @@
             }
         },
         render () {
-            if (this.derefSub(['stopped'])) {
-                return React.DOM.div();
-            }
+//            if (this.derefSub(['stopped'])) {
+//                return React.DOM.div();
+//            }
             const hierarchy = 'h';//reframe.subscribe(['hierarchy']).deref();
             const value = reframe.subscribe(['value']);
             const dep = reframe.subscribe(['value-deprecated']);
             return React.DOM.div({},
                 'App ', value.deref(), ' ',
                 this.derefSub(['value-deprecated']),
-                Component(value, dep, hierarchy),
+                this.derefSub(['stopped'])?null:Component(value, dep, hierarchy),
                 this.state.form.id(),
                 JSON.stringify(this.state.form.deref().toJS()),
                 Input('value', reframe.cursor(this.state.form, ['value']), hierarchy)
